# yugayu-os

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: BACKLOG.md  CLI_REFERENCE.md  CURRENT_STATE.md  DEVELOPER_GUIDE.md  PRODUCT_OVERVIEW.md  RELEASES.md  VISION.md
infrastructure/state_management/: id_ayu.sh  state_agent_ayu.sh⁠
src/yugayu/: config.py  logger.py  main.py
src/yugayu/commands/: activity.py  ask.py  create.py  create_ayu.py  dev_export_state.py  dev_run_test.py  dev_tree.py  identify.py  info.py  init.py  log.py  setup_lab.py  status.py  tree.py  verify_lab.py  wakeup_ayu.py
src/yugayu/core/: command_router.py  config.py  gateway.py  iam.py  iam_bouncer.py  key_negotiator.py  ledger.py  logger.py  passport.py  registry.py  utils.py  wallet.py
src/yugayu/core/architect/: capability_manager.py
src/yugayu/core/compliance/: license_warden.py
src/yugayu/core/economy/: treasury_wallet.py
src/yugayu/core/execution/: run_engine.py
src/yugayu/core/security/: encryption.py  enforcer.py  identity_issuer.py  identity_verifier.py
src/yugayu/core/state/: ledger_manager.py
test/: conftest.py
test/src/yugayu/commands/: test_activity.py  test_ask.py  test_create_ayu.py  test_dev_test.py  test_export_state.py  test_identify.py  test_setup_lab.py  test_status.py  test_tree.py  test_verify_lab.py  test_wakeup_ayu.py
test/src/yugayu/core/: test_command_router.py  test_config.py  test_e2e_cipher.py  test_iam.py  (+7 more)
(+10 files in other folders)
