[project]
name = "yugayu"
version = "0.1.0"
description = "AI Lab Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",  # For CLI commands
    "pyyaml>=6.0",   # For config files
    "rich>=13.0.0",  # For beautiful terminal output
]

[project.scripts]
# Maps the command 'yugayu' to the function 'app' in src/yugayu/main.py
yugayu = "yugayu.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
