[project]
name = "yugayu"
version = "0.1.0"
description = "AI Lab Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
yugayu = "yugayu.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"